# IntrDet--Intrusion-Detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/: alert_manager.h  anomaly_detector.h  intrdet_types.h  mock_boost.h  mock_pcap.h  packet_parser.h  packet_sniffer.h  processing_pipeline.h
src/: CMakeLists.txt  alert_manager.cpp  anomaly_detector.cpp  main.cpp  mock_pcap.cpp  packet_parser.cpp  packet_sniffer.cpp  processing_pipeline.cpp
tests/: CMakeLists.txt  test_alert_manager.cpp  test_anomaly_detector.cpp  test_packet_parser.cpp  test_packet_sniffer.cpp  test_processing_pipeline.cpp
